# purple

./: .gitignore  CMakeLists.txt
docker/: Dockerfile  configure-for-packaging.sh
docs/: PURPLE.ipynb
python/: CMakeLists.txt  setup.py.in
python/src/: bindings.cpp
python/test/: api.py  up-example1.py  up-kitchen.py  up.py
python/up/: setup.py  up_purple.py
python/up_purple/: engine.py
src/lib/: CMakeLists.txt
src/lib/include/purple/: problem.hpp  solver.hpp
src/lib/src/: purple.cpp  solver.cpp
tests/: CMakeLists.txt  kitchen.cpp  scratch.cpp
